Colocando o codigo da acao na operacao ao inves do id.

--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid ml-auto mt-4">
   <div class="row">
     <div class="col-3">
-        <p>Add operation: {{operation.stock}}</p>
+        <p>Add operation: {{operationNested.stock.code}}</p>
         <form #addOperationForm="ngForm">
           <div class="form-group">
             <label for="date">Date: </label>
