--- a/src/app/operation/operation-list/operation-list.component.html
+++ b/src/app/operation/operation-list/operation-list.component.html
@@ -22,6 +22,8 @@
             <div class="col-sm-12">
               <button class="btn-sm btn-primary" (click)="emmitSellSelected(operation)">Sell</button>
             </div>
+
+	      <zen-edit-operation ></zen-edit-operation>
           </div>
         </div>
       </div>
