--- a/src/app/operation/operation-list/operation-list.component.html
+++ b/src/app/operation/operation-list/operation-list.component.html
@@ -22,8 +22,11 @@
             <div class="col-sm-12">
               <button class="btn-sm btn-primary" (click)="emmitSellSelected(operation)">Sell</button>
             </div>
-
-	      <zen-edit-operation ></zen-edit-operation>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <button class="btn-sm btn-primary" (click)="emmitEditSelected(operation)">Edit</button>
+            </div>
           </div>
         </div>
       </div>
