--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -34,7 +34,7 @@
 
   <div class="col-9">
     <zen-operation-list (onExperienceOperationSelected)="experienceSelected($event)" (onBuyOperationSelected)="buySelected($event)"
-        (onSellOperationSelected)="sellSelected($event)"></zen-operation-list>
+        (onSellOperationSelected)="sellSelected($event)" (onEditOperationSelected)="editOperation($event)"></zen-operation-list>
   </div>
 </div>
 </div>
