Changing interface to a more descrete one.

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,11 +1,16 @@
-  <zen-add-stock></zen-add-stock>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <a href="/stock">Stock</a>
+    </div>
+  </div>
+</div>
 
 
-  <zen-operation></zen-operation>
+<zen-operation></zen-operation>
 
-  Experiencia:
-  <zen-experience-list></zen-experience-list>
+Experiencia:
+<zen-experience-list></zen-experience-list>
 
-  Buys:
-  <zen-buy-list></zen-buy-list>
-
+Buys:
+<zen-buy-list></zen-buy-list>
