--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,4 +1,14 @@
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <a href="/">GoHome</a>
+    </div>
+  </div>
+</div>
+
+<zen-add-stock></zen-add-stock>
+
+<div class="container-fluid">
   <div class="row mt-4">
       <div class="col" *ngFor="let stock of stocks; let i = index">
         <div class="card">
