Making a stocks combo

--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid ml-auto mt-4">
   <div class="row">
     <div class="col-3">
-        <p>Add operation: {{operationNested.stock.code}}</p>
+        <p>Add operation: {{operationNested.stock.code}} - <zen-stock-list></zen-stock-list></p>
         <form #addOperationForm="ngForm">
           <div class="form-group">
             <label for="date">Date: </label>
