--- a/src/app/stock/stock-list/stock-list.component.html
+++ b/src/app/stock/stock-list/stock-list.component.html
@@ -1,3 +1,3 @@
-<select [(ngModel)]="selectedStock">
+<select [(ngModel)]="selectedStock" (change)="emmitSelectedStock()">
   <option *ngFor="let stock of stocks" [ngValue]="stock">{{stock.code}}</option>
 </select>
