--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <a href="/stock">Stock</a>
+      <a href="/stock">Stock</a> |
+      <a href="/experience">Manage Experiences</a>
     </div>
   </div>
 </div>
