--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -1,18 +1,33 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-12">
+      <a href="/">GoHome</a>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
     <div class="col-12" *ngFor="let experience of experiences">
-      <div class="card">
-        <div class="card-body">
-          <p class="card-title">{{experience.operation.stock.code}} - {{experience.operation.date}}</p>
-          <div class="card-text">
-            <p>Stop Loss: {{ experience.stop_loss | number:'1.2-2'}}</p>
-            <p>Stop Gain: {{ experience.stop_gain | number:'1.2-2'}} </p>
-            <p>Limit: {{ experience.limit | number:'1.2-2'}} </p>
-            <p>Target: {{ experience.target | number:'1.2-2'}} </p>
-            <p>Action: {{ experience.action }}</p>
-            <p>Operation Gain: {{ experience.operation_gain | number:'1.2-2' }} </p>
-            <p>Operation Limit: {{ experience.operation_limit | number:'1.2-2'}} </p>
+      <div class="row">
+        <div class="col-6">
+          <div class="card">
+            <div class="card-body">
+              <p class="card-title">{{experience.operation.stock.code}} - {{experience.operation.date}}</p>
+              <div class="card-text">
+                <p>Stop Loss: {{ experience.stop_loss | number:'1.2-2'}}</p>
+                <p>Stop Gain: {{ experience.stop_gain | number:'1.2-2'}} </p>
+                <p>Limit: {{ experience.limit | number:'1.2-2'}} </p>
+                <p>Target: {{ experience.target | number:'1.2-2'}} </p>
+                <p>Action: {{ experience.action }}</p>
+                <p>Operation Gain: {{ experience.operation_gain | number:'1.2-2' }} </p>
+                <p>Operation Limit: {{ experience.operation_limit | number:'1.2-2'}} </p>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="col-6">
+          teste
         </div>
       </div>
     </div>
