--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-12" *ngFor="let experience of experiences">
       <div class="row">
-        <div class="col-6">
+        <div class="col-3">
           <div class="card">
             <div class="card-body">
               <p class="card-title">{{experience.operation.stock.code}} - {{experience.operation.date}}</p>
@@ -26,8 +26,45 @@
             </div>
           </div>
         </div>
+        <div class="col-3">
+          <p>Amount: {{ experience.operation.amount }}</p>
+          <p>Price: {{ experience.operation.price }}</p>
+          <p>Cost: {{ experience.operation.cost }}
+        </div>
         <div class="col-6">
-          teste
+          <form #focusExperienceForm="ngForm">
+            <div class="form-group">
+              <label for="target">Target: </label>
+              <input type="text" class="form-control form-control-sm" id="target" [(ngModel)]="experience.target" name="target">
+            </div>
+
+            <div class="form-group">
+            <label for="limit">Limit: </label>
+            <input type="text" class="form-control form-control-sm" id="limit" [(ngModel)]="experience.limit"
+              name="limit">
+            </div>
+
+            <div class="form-group">
+            <label for="stop_gain">Stop Gain: </label>
+            <input type="text" class="form-control form-control-sm" id="stop_gain" [(ngModel)]="experience.stop_gain"
+              name="stop_gain">
+            </div>
+
+            <div class="form-group">
+            <label for="stop_loss">Stop Loss: </label>
+            <input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
+              name="stop_loss">
+            </div>
+
+            <div class="form-group">
+            <label for="action">Action: </label>
+            <input type="text" class="form-control form-control-sm" id="action" [(ngModel)]="experience.action"
+              name="action">
+            </div>
+
+            <button type="button" class="btn btn-primary" (click)="edit(experience);" [disabled]="!focusExperienceForm.form.valid">Edit
+            </button>
+          </form>
         </div>
       </div>
     </div>
