--- a/src/app/operation/operation-list/operation-list.component.html
+++ b/src/app/operation/operation-list/operation-list.component.html
@@ -28,6 +28,11 @@
               <button class="btn-sm btn-primary" (click)="emmitEditSelected(operation)">Edit</button>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <button class="btn-sm btn-primary" (click)="deleteOperation(operation)">Delete</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
