--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -64,6 +64,9 @@
 
             <button type="button" class="btn btn-primary" (click)="edit(experience);" [disabled]="!focusExperienceForm.form.valid">Edit
             </button>
+
+            <button type="button" class="btn btn-primary" (click)="delete(experience);">Delete
+            </button>
           </form>
         </div>
       </div>
