--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -41,7 +41,7 @@
 
 
   <div class="col-9">
-    <zen-operation-list (onExperienceOperationSelected)="experienceSelected($event)" (onBuyOperationSelected)="buySelected($event)"
+    <zen-operation-list [operationsNested]="operationListNested" (onExperienceOperationSelected)="experienceSelected($event)" (onBuyOperationSelected)="buySelected($event)"
         (onSellOperationSelected)="sellSelected($event)" (onEditOperationSelected)="editOperation($event)"></zen-operation-list>
   </div>
 </div>
