--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -7,11 +7,5 @@
   </div>
 </div>
 
+<zen-operations-overview></zen-operations-overview>
 
-<zen-operation></zen-operation>
-
-Experiencia:
-<zen-experience-list></zen-experience-list>
-
-Buys:
-<zen-buy-list></zen-buy-list>
