--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -1,42 +1,35 @@
-<div class="container-fluid ml-auto mt-4">
-  <div class="row">
-    <div class="col-3">
-        <p>Add operation: {{operationNested.stock.code}} - <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
-        <form #addOperationForm="ngForm">
-          <div class="form-group">
-            <label for="date">Date: </label>
-            <input type="datetime-local" class="form-control" id="date" [(ngModel)]="operation.date" name="date">
-          </div>
+<form #addOperationForm="ngForm" *ngIf="!showExp && !showSell">
+  <p>Add operation: {{operationNested.stock.code}} - <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+  <div class="form-group">
+    <label for="date">Date: </label>
+    <input type="datetime-local" class="form-control" id="date" [(ngModel)]="operation.date" name="date">
+  </div>
 
-          <div class="form-group">
-            <label for="amount">Amount: </label>
-            <input type="text" class="form-control" id="amount" [(ngModel)]="operation.amount" name="amount">
-          </div>
+  <div class="form-group">
+    <label for="amount">Amount: </label>
+    <input type="text" class="form-control" id="amount" [(ngModel)]="operation.amount" name="amount">
+  </div>
 
-          <div class="form-group">
-            <label for="price">Price: </label>
-            <input type="text" class="form-control" id="price" [(ngModel)]="operation.price" name="price">
-          </div>
+  <div class="form-group">
+    <label for="price">Price: </label>
+    <input type="text" class="form-control" id="price" [(ngModel)]="operation.price" name="price">
+  </div>
 
-          <div class="form-group">
-            <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="operation.archived"
-                  [checked]="operation.archived">
-            <label for="checkbox">Archived</label>
-          </div>
+  <div class="form-group">
+    <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="operation.archived"
+                                                            [checked]="operation.archived">
+    <label for="checkbox">Archived</label>
+  </div>
 
-          <button type="button" class="btn btn-primary" (click)="add(); addOperationForm.reset()"
-                  [disabled]="!addOperationForm.form.valid" *ngIf="!isEditingOperation">Add
-          </button>
+  <button type="button" class="btn btn-primary" (click)="add(); addOperationForm.reset()"
+                        [disabled]="!addOperationForm.form.valid" *ngIf="!isEditingOperation">Add
+  </button>
 
-          <button type="button" class="btn btn-primary" (click)="edit(); addOperationForm.reset()"
-                  [disabled]="!addOperationForm.form.valid" *ngIf="isEditingOperation">Edit
-          </button>
-        </form>
+  <button type="button" class="btn btn-primary" (click)="edit(); addOperationForm.reset()"
+                        [disabled]="!addOperationForm.form.valid" *ngIf="isEditingOperation">Edit
+  </button>
+</form>
 
-      <zen-experience [operation]="operationNested" *ngIf="showExp"></zen-experience>
+<zen-experience [operation]="operationNested" *ngIf="showExp"></zen-experience>
 
-      <zen-sell [operationNested]="operationNested" *ngIf="showSell"></zen-sell>
-
-      </div>
-</div>
-</div>
+<zen-sell [operationNested]="operationNested" *ngIf="showSell"></zen-sell>
