--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -1,13 +1,19 @@
-<zen-operation (onOperationChanged)="updateOperationList()"></zen-operation>
 
-<div class="col-9">
-  <zen-operation-list [operationsNested]="operationsNested" (onExperienceOperationSelected)="operationComponent.experienceSelected($event)" (onBuyOperationSelected)="operationComponent.buySelected($event)"
-    (onSellOperationSelected)="operationComponent.sellSelected($event)" (onEditOperationSelected)="operationComponent.editOperation($event)"
-    (onDeleteOperationSelected)="operationComponent.delete($event)"></zen-operation-list>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3">
+      <zen-operation (onOperationChanged)="updateOperationList()"></zen-operation>
+    </div>
+    <div class="col-9">
+      <zen-operation-list [operationsNested]="operationsNested" (onExperienceOperationSelected)="operationComponent.experienceSelected($event)" (onBuyOperationSelected)="operationComponent.buySelected($event)"
+        (onSellOperationSelected)="operationComponent.sellSelected($event)" (onEditOperationSelected)="operationComponent.editOperation($event)"
+        (onDeleteOperationSelected)="operationComponent.delete($event)"></zen-operation-list>
+
+    </div>
+  </div>
+    <div class="row">
+      <div class="col-12">
+        <zen-buy-list></zen-buy-list>
+      </div>
+    </div>
 </div>
-
-Experiencia:
-<zen-experience-list [experiences]="experiences"></zen-experience-list>
-
-Buys:
-<zen-buy-list></zen-buy-list>
