--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -13,7 +13,7 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <p class="card-title">{{experience.operation.stock.code}} - {{experience.operation.date}}</p>
+              <p class="card-title">{{experience.operation.stock.code}} - {{ experience.operation.nickname }}</p>
               <div class="card-text">
                 <p>Stop Loss: {{ experience.stop_loss | number:'1.2-2'}}</p>
                 <p>Stop Gain: {{ experience.stop_gain | number:'1.2-2'}} </p>
