--- a/src/app/operation/operation-list/operation-list.component.html
+++ b/src/app/operation/operation-list/operation-list.component.html
@@ -2,8 +2,8 @@
   <div class="col-md-3 mb-1" *ngFor="let operation of operationsNested">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">{{operation.stock.code}}</h4>
-        <h6 class="card-subtitle mb-2 text-muted">{{ operation.date | date:'dd/MM/y' }}</h6>
+        <h4 class="card-title">{{operation.stock.code}} - {{ operation.date | date:'dd/MM/y' }}</h4>
+        <h6 class="card-subtitle mb-2 text-muted">{{ operation.nickname }}</h6>
         <p class="card-text">Amount: {{ operation.amount }}</p>
         <p class="card-text">Price: {{operation.price}}</p>
         <p class="card-text">Cost: {{ operation.cost }}</p>
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <zen-buy [operationNested]="operation"></zen-buy>
+            <button class="btn-sm btn-primary" (click)="emmitBuySelected(operation)">Buy</button>
           </div>
         </div>
         <div class="row">
