--- a/src/app/operation/operation/operation.component.html
+++ b/src/app/operation/operation/operation.component.html
@@ -1,4 +1,4 @@
-<form #addOperationForm="ngForm" *ngIf="!showExp && !showSell">
+<form #addOperationForm="ngForm" *ngIf="!showExp && !showSell && !showBuy">
   <p>Add operation: {{operationNested.stock.code}} - <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
   <div class="form-group">
     <label for="date">Date: </label>
@@ -13,6 +13,11 @@
   <div class="form-group">
     <label for="price">Price: </label>
     <input type="text" class="form-control" id="price" [(ngModel)]="operation.price" name="price">
+  </div>
+
+  <div class="form-group">
+    <label for="nickname">Nickname: </label>
+    <input type="text" class="form-control" id="nickname" [(ngModel)]="operation.nickname" name="nickname">
   </div>
 
   <div class="form-group">
@@ -33,3 +38,5 @@
 <zen-experience [operation]="operationNested" *ngIf="showExp"></zen-experience>
 
 <zen-sell [operationNested]="operationNested" *ngIf="showSell"></zen-sell>
+
+<zen-buy [operationNested]="operationNested" *ngIf="showBuy"></zen-buy>
