--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,8 @@
 @import url("assets/css/reset.css");
 @import url("../node_modules/bootstrap/dist/css/bootstrap.css");
 
-
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
