--- a/src/app/operation/sell/sell.component.html
+++ b/src/app/operation/sell/sell.component.html
@@ -1,17 +1,18 @@
-<div class="container-fluid ml-auto mt-4">
-  <div class="row">
-    <div class="col-3">
-      <p>Sell: </p>
-      <form #addSellForm="ngForm">
-        <label for="operation">Operation: </label>
-        <input type="text" id="operation" [(ngModel)]="operationNested.pk" name="operation">
-
-        <label for="value">Value: </label>
-        <input type="text" id="value" [(ngModel)]="sell.value" name="value">
-
-        <button type="button" (click)="add(); addSellForm.reset()"
-                [disabled]="!addSellForm.form.valid">Add
-        </button>
-      </form>
+<div>
+  <p>Sell: </p>
+  <form #addSellForm="ngForm">
+    <div class="form-group">
+      <label for="operation">Operation: </label>
+      <input type="text" class="form-control form-control-sm" id="operation" [(ngModel)]="operationNested.pk" name="operation">
     </div>
-  </div>
+
+    <div class="form-group">
+      <label for="value">Value: </label>
+      <input type="text" class="form-control form-control-sm" id="value" [(ngModel)]="sell.value" name="value">
+    </div>
+
+    <button type="button" (click)="add(); addSellForm.reset()"
+            [disabled]="!addSellForm.form.valid" class="btn btn-primary">Add
+    </button>
+  </form>
+</div>
