--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12" *ngFor="let experience of experiences">
-      <div class="row">
+      <div class="row mt-3">
         <div class="col-3">
           <div class="card">
             <div class="card-body">
@@ -68,6 +68,7 @@
             <button type="button" class="btn btn-primary" (click)="delete(experience);">Delete
             </button>
           </form>
+          <hr>
         </div>
       </div>
     </div>
