--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -11,7 +11,7 @@
 
     </div>
   </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-12">
         <zen-buy-list [buys]="buys"></zen-buy-list>
       </div>
