Changing the experiment gain to target gain

--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -20,7 +20,7 @@
                 <p>Limit: {{ experience.limit | number:'1.2-2'}} </p>
                 <p>Target: {{ experience.target | number:'1.2-2'}} </p>
                 <p>Action: {{ experience.action }}</p>
-                <p>Operation Gain: {{ experience.operation_gain | number:'1.2-2' }} </p>
+                <p>Target Gain: {{ experience.target_gain | number:'1.2-2' }} </p>
                 <p>Operation Limit: {{ experience.operation_limit | number:'1.2-2'}} </p>
               </div>
             </div>
