--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -13,23 +13,23 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <p class="card-title">{{experience.operation.stock.code}} - {{ experience.operation.nickname }}</p>
+              <p class="card-title">{{ experience.stock }} - {{ experience.nickname }}</p>
               <div class="card-text">
-                <p>Stop Loss: {{ experience.stop_loss | number:'1.2-2'}}</p>
-                <p>Stop Gain: {{ experience.stop_gain | number:'1.2-2'}} </p>
-                <p>Limit: {{ experience.limit | number:'1.2-2'}} </p>
-                <p>Target: {{ experience.target | number:'1.2-2'}} </p>
+                <p>Stop Loss: {{ experience.stop_loss | number:'1.2-2' }}</p>
+                <p>Stop Gain: {{ experience.stop_gain | number:'1.2-2' }} </p>
+                <p>Limit: {{ experience.limit | number:'1.2-2' }} </p>
+                <p>Target: {{ experience.target | number:'1.2-2' }} </p>
                 <p>Action: {{ experience.action }}</p>
                 <p>Target Gain: {{ experience.target_gain | number:'1.2-2' }} </p>
-                <p>Operation Limit: {{ experience.operation_limit | number:'1.2-2'}} </p>
+                <p>Operation Limit: {{ experience.operation_limit | number:'1.2-2' }} </p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-3">
-          <p>Amount: {{ experience.operation.amount }}</p>
-          <p>Price: {{ experience.operation.price }}</p>
-          <p>Cost: {{ experience.operation.cost }}
+          <p>Amount: {{ experience.amount }}</p>
+          <p>Price: {{ experience.price }}</p>
+          <p>Cost: {{ experience.cost }}
         </div>
         <div class="col-6">
           <form #focusExperienceForm="ngForm">
@@ -39,27 +39,27 @@
             </div>
 
             <div class="form-group">
-            <label for="limit">Limit: </label>
-            <input type="text" class="form-control form-control-sm" id="limit" [(ngModel)]="experience.limit"
-              name="limit">
+              <label for="limit">Limit: </label>
+              <input type="text" class="form-control form-control-sm" id="limit" [(ngModel)]="experience.limit"
+                                                                      name="limit">
             </div>
 
             <div class="form-group">
-            <label for="stop_gain">Stop Gain: </label>
-            <input type="text" class="form-control form-control-sm" id="stop_gain" [(ngModel)]="experience.stop_gain"
-              name="stop_gain">
+              <label for="stop_gain">Stop Gain: </label>
+              <input type="text" class="form-control form-control-sm" id="stop_gain" [(ngModel)]="experience.stop_gain"
+                                                                      name="stop_gain">
             </div>
 
             <div class="form-group">
-            <label for="stop_loss">Stop Loss: </label>
-            <input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
-              name="stop_loss">
+              <label for="stop_loss">Stop Loss: </label>
+              <input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
+                                                                      name="stop_loss">
             </div>
 
             <div class="form-group">
-            <label for="action">Action: </label>
-            <input type="text" class="form-control form-control-sm" id="action" [(ngModel)]="experience.action"
-              name="action">
+              <label for="action">Action: </label>
+              <input type="text" class="form-control form-control-sm" id="action" [(ngModel)]="experience.action"
+                                                                      name="action">
             </div>
 
             <button type="button" class="btn btn-primary" (click)="edit(experience);" [disabled]="!focusExperienceForm.form.valid">Edit
