--- a/src/app/operation/experience/experience.component.html
+++ b/src/app/operation/experience/experience.component.html
@@ -1,37 +1,66 @@
 <p>Add experience: </p>
 <div>
-  <form #addExperienceForm="ngForm">
-    <p>Operation: {{operation.stock.code}} - {{ operation.date | date:'dd/MM/y' }}</p>
-    <div class="form-group">
-      <label for="target">Target: </label>
-      <input type="text" class="form-control form-control-sm" id="target" [(ngModel)]="experience.target" name="target">
-    </div>
+	<form #addExperienceForm="ngForm">
+		<p>{{experience.stock.code}} - {{ experience.date | date:'dd/MM/y' }}</p>
 
-    <div class="form-group">
-      <label for="limit">Limit: </label>
-      <input type="text" class="form-control form-control-sm" id="limit" [(ngModel)]="experience.limit"
-                                                              name="limit">
-    </div>
+		<p>Add operation: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+		<div class="form-group">
+			<label for="date">Date: </label>
+			<input type="datetime-local" class="form-control" id="date" [(ngModel)]="experience.date" name="date">
+		</div>
 
-    <div class="form-group">
-      <label for="stop_gain">Stop Gain: </label>
-      <input type="text" class="form-control form-control-sm" id="stop_gain" [(ngModel)]="experience.stop_gain"
-                                                              name="stop_gain">
-    </div>
+		<div class="form-group">
+			<label for="amount">Amount: </label>
+			<input type="text" class="form-control" id="amount" [(ngModel)]="experience.amount" name="amount">
+		</div>
 
-    <div class="form-group">
-      <label for="stop_loss">Stop Loss: </label>
-      <input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
-                                                              name="stop_loss">
-    </div>
+		<div class="form-group">
+			<label for="price">Price: </label>
+			<input type="text" class="form-control" id="price" [(ngModel)]="experience.price" name="price">
+		</div>
 
-    <div class="form-group">
-      <label for="action">Action: </label>
-      <input type="text" class="form-control form-control-sm" id="action" [(ngModel)]="experience.action"
-                                                              name="action">
-    </div>
+		<div class="form-group">
+			<label for="nickname">Nickname: </label>
+			<input type="text" class="form-control" id="nickname" [(ngModel)]="experience.nickname" name="nickname">
+		</div>
 
-    <button type="button" (click)="add(); addExperienceForm.reset()" class="btn btn-primary"
-                                                                     [disabled]="!addExperienceForm.form.valid">Add
-    </button>
-  </form>
+		<div class="form-group">
+			<input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="experience.archived"
+																													 [checked]="experience.archived">
+			<label for="checkbox">Archived</label>
+		</div>
+    <!-- End of the Operations commons -->
+
+		<div class="form-group">
+			<label for="target">Target: </label>
+			<input type="text" class="form-control form-control-sm" id="target" [(ngModel)]="experience.target" name="target">
+		</div>
+
+		<div class="form-group">
+			<label for="limit">Limit: </label>
+			<input type="text" class="form-control form-control-sm" id="limit" [(ngModel)]="experience.limit"
+																													 name="limit">
+		</div>
+
+		<div class="form-group">
+			<label for="stop_gain">Stop Gain: </label>
+			<input type="text" class="form-control form-control-sm" id="stop_gain" [(ngModel)]="experience.stop_gain"
+																													 name="stop_gain">
+		</div>
+
+		<div class="form-group">
+			<label for="stop_loss">Stop Loss: </label>
+			<input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
+																													 name="stop_loss">
+		</div>
+
+		<div class="form-group">
+			<label for="action">Action: </label>
+			<input type="text" class="form-control form-control-sm" id="action" [(ngModel)]="experience.action"
+																													 name="action">
+		</div>
+
+		<button type="button" (click)="add(); addExperienceForm.reset()" class="btn btn-primary"
+																																	 [disabled]="!addExperienceForm.form.valid">Add
+		</button>
+	</form>
