--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -2,11 +2,11 @@
   <div class="col-2" *ngFor="let buy of buys">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">{{ buy.operation.stock.code }}</h4>
-        <h6 class="card-subtitle mb-2 text-muted">{{ buy.operation.nickname }}</h6>
+        <h4 class="card-title">{{ buy.stock_data.code }}</h4>
+        <h6 class="card-subtitle mb-2 text-muted">{{ buy.nickname }}</h6>
         <div class="card-text">
           <p>Compra: R$ {{ buy.price }}</p>
-          <p>Preço Ação: R$ {{ buy.stock }}</p>
+          <p>Preço Ação: R$ {{ buy.stock_data.price }}</p>
           <p>Quantidade: R$ {{ buy.amount }}</p>
           <hr>
           <p>Resultado: R$ {{ buy.operation_gain }}</p>
