--- a/src/app/stock/stock-select/stock-select.component.html
+++ b/src/app/stock/stock-select/stock-select.component.html
@@ -1,3 +1,3 @@
-<select [(ngModel)]="selectedStock" (change)="emmitSelectedStock()">
+<select [(ngModel)]="selectedStock" (change)="emmitSelectedStock()" class="form-control">
   <option *ngFor="let stock of stocks" [ngValue]="stock">{{stock.code}}</option>
 </select>
