A lot of details added

--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -7,7 +7,7 @@
         <div class="card-text">
           <p>Compra: R$ {{ buy.price }}</p>
           <p>Preço Ação: R$ {{ buy.stock_data.price }}</p>
-          <p>Quantidade: R$ {{ buy.amount }}</p>
+          <p>Quantidade: {{ buy.amount }}</p>
           <hr>
           <p>Resultado: R$ {{ buy.operation_gain }}</p>
         </div>
