Focus on buy created.

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-12">
       <a href="/stock">Stock</a> |
-      <a href="/experience">Manage Experiences</a>
+      <a href="/experience">Manage Experiences</a> |
+      <a href="/buy-focus">Focus on Buys</a>
     </div>
   </div>
 </div>
